--- a/static/base.css
+++ b/static/base.css
@@ -10,6 +10,7 @@
     -moz-user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
+    -webkit-tap-highlight-color: transparent;
 }
 
 html {
