--- a/static/style.css
+++ b/static/style.css
@@ -76,8 +76,6 @@ main {
 }
 
 #top-bar-userimg {
-    cursor: pointer;
-    z-index: 300;
     object-fit: cover;
 }
 
@@ -1052,6 +1050,37 @@ main {
     height: auto;
     padding-bottom: 10px;
 }
+
+#top-bar-logo-userimg {
+    position: relative;
+    cursor: pointer;
+    z-index: 300;
+}
+
+#notification-dot {
+    position: absolute;
+    top: -3px;
+    right: -3px;
+    background-color: red;
+    height: 20px;
+    width: 20px;
+    border-radius: 100vw;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 700;
+    font-size: 14px;
+    transform: scale(0);
+    transition: transform 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+#notification-dot.active {
+    transform: scale(1);
+}
+
+
+
 
 
 @media screen and (max-width: 700px) {
