--- a/static/style.css
+++ b/static/style.css
@@ -872,6 +872,7 @@ main {
     margin-left: 20px;
     margin-right: 20px;
     position: relative;
+    margin-bottom: 30px;
 }
 
 #bar-section-top {
@@ -1037,6 +1038,13 @@ main {
 }
 #new-friend.active {
     transform: scale(1);
+}
+
+@media screen and (max-width: 550px) {
+    #new-friend {
+        width: 100vw;
+        right: 0;
+    }
 }
 
 #new-friend-title {
