--- a/static/style-admin.css
+++ b/static/style-admin.css
@@ -18,6 +18,16 @@
     background-color: rgb(0, 0, 0);
     position: absolute;
     object-fit: cover;
+    scale: 0;
+}
+
+.top-left-img.show {
+    border-radius: 100vw;
+    background-color: rgb(0, 0, 0);
+    position: absolute;
+    object-fit: cover;
+    transition: scale 1s cubic-bezier(0, 0, 0.3, 1.3);
+    scale: 1;
 }
 
 @keyframes top-img-anim {
@@ -192,8 +202,13 @@
     background-image: url("angle-down-solid-white.svg");
     background-repeat: no-repeat;
     transform: rotate(-90deg) translateX(0.5px);
-    transition: transform .8s cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform .8s cubic-bezier(0.4, 0, 0.2, 1), margin-left .8s cubic-bezier(0.4, 0, 0.2, 1);
     
+}
+
+.last-stream-track-right.admin.rotate-90 {
+    transform: rotate(0deg) translateX(0.5px);
+    margin-left: 5px;
 }
 
 .last-stream-track-right.admin.rotate-180 {
@@ -273,7 +288,7 @@
     align-items: center;
 }
 
-#hidden-init-data {
+#hidden-init-data, #hidden-access-token {
     display: none;
 }
 
@@ -447,4 +462,128 @@
 .right-column-user-clients-text.no-left-padding-no-left-margin {
     margin-left: 0;
     padding-left: 0;
+}
+
+.last-stream-track.right {
+    overflow: hidden;
+    height: 0;
+    transform: translateX(-50px);
+    margin-bottom: 0;
+    padding-bottom: 0;
+    border-bottom-width: 0;
+    transition: height 1.5s cubic-bezier(0.4, 0, 0.2, 1), transform 1.5s cubic-bezier(0.4, 0, 0.2, 1), border-bottom-width 1.5s cubic-bezier(0.4, 0, 0.2, 1), margin-bottom 1.5s cubic-bezier(0.4, 0, 0.2, 1), padding-bottom 1.5s cubic-bezier(0.4, 0, 0.2, 1);
+    display: flex;
+    flex-direction: column;
+}
+
+.last-stream-track.right.show {
+    height: 80px;
+    transform: translateX(0);
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+    border-bottom-width: 2px;
+}
+
+.last-stream-track.right.show.open {
+    height: 135px;
+    transform: translateX(0);
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+    border-bottom-width: 2px;
+    flex-direction: column;
+}
+
+.last-stream-track.right.show.open.fillbottom {
+    height: 55px;
+    /* background-color: #B4093B; */
+    margin-bottom: 0;
+    padding-bottom: 0;
+    border-bottom-width: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+/* .last-stream-track.right.show.open.fillbottom.showbottom {
+    height: 200px!important;
+} */
+
+
+.seemore {
+    text-decoration: none;
+    color: var(--darkgreen-txt);
+    width: calc(100% - 8px);
+    display: flex;
+    justify-content: right;
+    margin-right: 10px;
+}
+.seemore:hover, .seemore-el:hover  {
+    cursor: pointer;
+}
+.seemore:link, .seemore-el:link {
+    color: var(--darkgreen-txt);
+}
+.seemore:visited, .seemore-el:visited {
+    color: var(--darkgreen-txt);
+}
+.seemore:hover, .seemore-el:hover {
+    color: var(--lightgreen-bg);
+}
+.seemore:active, .seemore-el:active {
+    color: var(--darkgreen-txt);
+}
+
+.seemore-el {
+    text-decoration: none;
+    color: var(--darkgreen-txt);
+
+}
+
+.spanoutsiderow {
+    display: flex!important;
+    flex-direction: row!important;
+    width: 100%;
+    justify-content: space-between;
+}
+
+#left-column, #right-column, .section-titles.admin, .last-stream.admin {
+    max-width: 800px;
+}
+
+.last-stream-track.admin.show, .last-stream-track.right{
+    max-width: 750px;
+}
+
+.last-stream-track-content, .divunderActions {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.divunderActionsHide {
+    width: 20px;
+    height: 20px;
+    background-color: blue;
+
+    background-image: url("hide.svg");
+    background-repeat: no-repeat;
+    object-fit: cover;
+    background-size: contain;
+
+}
+
+.divunderActionsDelete {
+    width: 20px;
+    height: 20px;
+    background-color: red;
+
+    background-image: url("trash.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    
+
+}
+
+.divunderActionsHide:hover, .divunderActionsDelete:hover {
+    cursor: pointer;
 }
